--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -18,12 +18,16 @@
 		  	{'occupied':false,'disabled':false,'status':'empty'}
 		  ];
 
+
 		  $interval(doWorkSon,1000);
 
-		  $interval(randomSim,5000);
+		  var promise = $interval(randomSim,5000);
 
 		  $scope.orders = [];
 		  $scope.message = 'Idle';
+		  $scope.intervals = [{'name':'Busy','interval':500},{'name':'Moderate','interval':1000},{'name':'Slow','interval':5000}];
+		  $scope.currentInterval = 5000;
+
 
 		  $scope.occupy = function(id) {
 	        $scope.tables[id].occupied = true;
@@ -49,6 +53,11 @@
 		  	$scope.tables[id].disabled = true;
 		  	$scope.tables[id].status = 'pending';
 		  	$scope.orders.push({'message':"Grab check from table " + (id + 1),'id':id,type:'payCheck' });
+		  }
+
+		  $scope.updateInterval = function(){
+		  	$interval.cancel(promise);
+		  	promise = $interval(randomSim,$scope.currentInterval);
 		  }
 
 		  $scope.status = {
@@ -130,7 +139,7 @@
 		<div class="row">
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div style="background:black; width:100%; height:500px;" >
-					<div id="table1" style="background:red; width: 50px;height:50px; top:100px; left:50px; position:fixed;">
+					<div id="table1" style="background:yellow; width: 50px;height:50px; top:100px; left:50px; position:fixed;">
 					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px; position:relative;"/>
 					</div>
 					<div id="table2" style="background:yellow; width: 50px; height:50px; top:100px; left:150px; position:fixed; z-index:1;">
@@ -153,6 +162,10 @@
 
 				</div>
 				<div class="alert alert-info" role="alert"><h3>{{message}}</h3></div>
+				<div class="options">
+					<select class="form-control" ng-options="interval.interval as interval.name for interval in intervals" ng-change="updateInterval()" ng-model="currentInterval"></select>
+						
+				</div>
 			</div>
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
