--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -11,12 +11,12 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
-<body>
+<body style = "width: 1200px;">
 	<div ng-controller="ResturantController">
 		<div class="row">
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div style="width: 400px;" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div style="background:black; width:100%; height:500px" >
-					<div id="table1" style="background:yellow; width: 50px; height:50px; left:50px; top:100px; position: absolute;">
+					<div id="table1" style="background:yellow; width: 50px; height:50px; left:50px; top:100px; position: absolute; z-index: 1;">
 					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
 					</div>
 					<div id="table2" style="background:yellow; width: 50px; height:50px; top:100px; left:150px; position: absolute; z-index: 1;">
@@ -44,7 +44,7 @@
 
 				</div>
 			</div>
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div style="width: 400px;" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
@@ -136,7 +136,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div style="width: 400px;" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div class="list-group">
 				  <a href="#" class="list-group-item" ng-repeat="order in orders">{{order.message}}</a>
 				</div>
