make bootstrap css local and cleanup html style code

--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -8,34 +8,34 @@
     <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
 </head>
-<body style = "width: 1200px;">
+<body>
 	<div ng-controller="ResturantController">
 		<div class="row">
-			<div style="width: 400px;" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div style="background:black; width:100%; height:500px" >
-					<div id="table1" style="background:yellow; width: 50px; height:50px; left:50px; top:100px; position: absolute; z-index: 1;">
-					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
+					<div id="table1">
+					<img class="face" src="img/face.png"/>
 					</div>
-					<div id="table2" style="background:yellow; width: 50px; height:50px; top:100px; left:150px; position: absolute; z-index: 1;">
-					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
+					<div id="table2">
+					<img class="face" src="img/face.png"/>
 					</div>
-					<div id="table3" style="background:yellow; width: 50px; height:50px; top:100px; left:250px; position: absolute; z-index: 1;">
-					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
+					<div id="table3">
+					<img class="face" src="img/face.png"/>
 					</div>
-					<div id="table4" style="background:yellow; width: 50px; height:50px; top:200px; left:50px; position: absolute; z-index: 1;">
-					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
+					<div id="table4">
+					<img class="face" src="img/face.png"/>
 					</div>
-					<div id="table5" style="background:yellow; width: 50px; height:50px; top:200px; left:150px; position: absolute; z-index: 1;">
-					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
+					<div id="table5">
+					<img class="face" src="img/face.png"/>
 					</div>
-					<div id="table6" style="background:yellow; width: 50px; height:50px; top:200px; left:250px; position: absolute; z-index: 1;">
-					<img src="img/face.png" style="margin-top: -75px; height: 35px; width: 35px;"/>
+					<div id="table6">
+					<img class="face" src="img/face.png"/>
 					</div>
 
-					<img class="robot" src="img/robotArm.png" height="70" width="70" style="z-index: 100; position:absolute;top:400px; left:250px;"/>
+					<img class="robot" src="img/robotArm.png"/>
 
 				</div>
 				<div class="alert alert-info" role="alert"><h3>{{message}}</h3></div>
@@ -44,7 +44,7 @@
 
 				</div>
 			</div>
-			<div style="width: 400px;" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
@@ -136,7 +136,7 @@
 					</div>
 				</div>
 			</div>
-			<div style="width: 400px;" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div class="list-group">
 				  <a href="#" class="list-group-item" ng-repeat="order in orders">{{order.message}}</a>
 				</div>
