implemented the images for the food and drinks.

--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -2,7 +2,7 @@
 <html ng-app="resturant.robot">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Server Side Restaurant</title>
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
     <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
@@ -110,24 +110,32 @@
 				<div id = "blackbox" >
 					<div id="table1">
 					<img class="face" src="img/face.png"/>
+					<img class="tableImg1" src='img/table.png'/>
 					</div>
 					<div id="table2">
 					<img class="face" src="img/face.png"/>
+					<img class="tableImg1" src='img/table.png'/>
 					</div>
 					<div id="table3">
 					<img class="face" src="img/face.png"/>
+					<img class="tableImg1" src='img/table.png'/>
 					</div>
 					<div id="table4">
 					<img class="face" src="img/face.png"/>
+					<img class="tableImg1" src='img/table.png'/>
 					</div>
 					<div id="table5">
 					<img class="face" src="img/face.png"/>
+					<img class="tableImg1" src='img/table.png'/>
 					</div>
 					<div id="table6">
 					<img class="face" src="img/face.png"/>
+					<img class="tableImg1" src='img/table.png'/>
 					</div>
-
-					<img class="robot" src="img/robotArm.png"/>
+					
+					<div class='robot'>
+					<img id="robotArm" src="img/robotArm.png"/>
+					</div>
 
 				</div>
 				<div class="alert alert-info" role="alert"><h3>{{message}}</h3></div>
