--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -159,7 +159,7 @@
 
 			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<div class="list-group">
-				  <a href="#" class="list-group-item" ng-repeat="order in orders">{{order.command}} <span class='{{order.type}}'>{{order.item}}</span> {{(order.command == ('Give')) ? 'to' : (order.command == ('Grab' || 'Get')) ? 'from' : ''}} Table <span class='tableNum'>{{order.table}}</span></a>
+				  <a href="#" class="list-group-item" ng-repeat="order in orders">{{order.command}} <span class='{{order.type}}'>{{order.item}}</span> {{(order.command == ('Give')) ? 'to' : (order.command == ('Grab' || 'Get')) ? 'from' : ''}} table <span class='tableNum'>{{order.table}}</span></a>
 				</div>
 			</div>
 		</div>
