Changed tables and added random interval to kitchen queue

--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -106,14 +106,14 @@
 				</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="overflow: auto; height:600px">
 					<h2>Kitchen Queue</h2>
 					<table class="table table-striped">
 						<thead>
 							<tr><th>Table #</th><th>Food Item</th><th>Progress</th></tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="food in kitchenQueue track by $index | orderBy: '-timeleft'" ng-if="food">
+							<tr ng-repeat="food in kitchenQueue | orderBy: '-timeleft' track by $index " ng-if="food">
 								<td>Table {{food.id}}</td>
 								<td>{{food.item}}</td>
 								<td><progressbar animate="true" class="progress-striped" value="food.timeleft" type="{{food.status}}">{{food.timeleft}}%</progressbar></td>
@@ -175,8 +175,7 @@
 				</div>
 			</div>
 
-			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-				<div class="list-group">
+			<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="overflow: auto; height:600px">
 					<h2>Robot Queue</h2>
 					<table class="table table-striped">
 						<thead>
@@ -186,13 +185,10 @@
 							<tr ng-repeat="order in orders">
 								<td>{{order.id + 1 }}</td>
 								<td>{{order.item}}</td>
-								<td>{{order.type}}</td>
+								<td>{{order.command}}</td>
 							</tr>	
 						</tbody>
 					</table>
-
-				<!--   <a href="#" class="list-group-item" ng-repeat="order in orders">{{order.command}} <span class='{{order.type}}'>{{order.item}}</span> {{(order.command == ('Give')) ? 'to' : (order.command == ('Grab' || 'Get')) ? 'from' : ''}} table <span class='tableNum'>{{order.table}}</span></a> -->
-				</div>
 			</div>
 		</div>
 	</div>
