adding neo4j stuff

--- a/cs447velocity.html
+++ b/cs447velocity.html
@@ -190,6 +190,9 @@
 						</tbody>
 					</table>
 			</div>
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				{{visits}}
+			</div>
 		</div>
 	</div>
 
